refactor: make the application ready for deployment